refactored connection string for new server

--- a/InsuranceServiceApp/appsettings.json
+++ b/InsuranceServiceApp/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "InsuranceSystemDB": "Data Source=PTL-LPT-016\\SQLEXPRESS;Initial Catalog=InsuranceSystemDB;Integrated Security=True;Trust Server Certificate=True"
+    "InsuranceSystemDB": "Data Source=DESKTOP-BMPV1P1\\SQLEXPRESS;Initial Catalog=InsuranceSystemDB;Integrated Security=True;Trust Server Certificate=True"
   },
   "AllowedHosts": "*"
 }
